css/index.css
html,body {
	padding : 0px;
	margin: 0px;
	height: 100%;
	width: 100%;
	border: none;
}

.wrapper {
	box-shadow: 0px 5px 18px 5px #a9a9a9;
	margin-left: auto;
	margin-right: auto;
	margin-top: -275px;
	top: 50%;
	width: 500px;
	height: 550px;
}

.scoreBoard {
	width: 225px;
	background: #04517e;
	font-family: 'Sigmar One', cursive;
}

.scoreBoard .gameTitle {
	color: #fff;
	text-align: center;
}

.scoreBoard .score, .scoreBoard .highScore {
	text-align: center;
	color: white;
}

table#tableTetris {
  width: 275px;
  border-spacing: 0;
	border: 1px solid #04517e;
  border-collapse: collapse;
	float: right;
}

table#tableTetris td {
  border: 1px solid black;
}

table.showcase {
  width: 100px;
	height: 80px;
  border-spacing: 0;
	background: #fff;
	border: 1px solid #04517e;
  border-collapse: collapse;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 25px;
}

.internalWrappers.playWrapper { 
	width: 134.50px;
	margin: 0 auto;
}

table.showcase td {
  border: 1px solid black;
}

.floatRight {
	float: right;
}

.relativeElement {
	position: relative;
}

.heightHundred {
	height: 100%;
}

.internalWrappers {
	overflow: hidden;
}

i.fa {
	font-size: 48px;
	width: 42px;
	margin-top: 25px;
	color: white;
	text-align: center;
	transition: transform 0.25s ease;
}

i.fa.disabled {
	opacity: 0.5;
}

i.fa:not(.disabled):hover {
	transform: scale(0.9);
	cursor: pointer;
}

